Dans le cas où un élément n'a pas d'image associée, on ne tente pas d'afficher une image (#490). On prendra cependant soin de rendre la "boîte" contenant le libellé plus lisible dans ce cas.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6144 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/map.css
+++ b/src/vigilo/themes/public/vigimap/css/map.css
@@ -159,7 +159,7 @@ h1 a:hover {
     /*  Nécessaire pour IE 7. La feuille "non-ie7.css"
         remplace cette valeur pour les autres navigateurs,
         y compris pour IE 8 qui ne présente plus le bug. */
-    margin: 0;
+    margin: 1px;
 }
 
 #map .obj {
