--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -15,9 +15,20 @@
 #map .serviceelement span {
     font-size: 80%;
     font-family: sans-serif;
-    /*background-color: white;*/
+    background-color: white;
     /*font-weight: bold;
     opacity: 0.7;*/
+}
+
+#map .serviceelement span.no-icon,
+.obj span.no-icon {
+    border: 1px solid black;
+    padding: 4px;
+}
+
+#map .serviceelement span.no-icon-display {
+    padding-left: 26px;
+    background-position: 4px;
 }
 
 #details ul.tags {
