Correction d'un décalage dans la légende.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6156 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/legend.html
+++ b/src/vigilo/themes/templates/vigimap/legend.html
@@ -14,10 +14,10 @@
             <dd><span class="legend-ok"></span>${l_("OK")}</dd>
 
             <dt class="status-warning">&#160;</dt>
-            <dd><span class="legend-warning">${l_("Warning")}</span></dd>
+            <dd><span class="legend-warning"></span>${l_("Warning")}</dd>
 
             <dt class="status-critical">&#160;</dt>
-            <dd><span class="legend-critical">${l_("Critical")}</span></dd>
+            <dd><span class="legend-critical"></span>${l_("Critical")}</dd>
         </dl>
     </div>
     <div id="legend-links" py:if="has_link">
