Correction des styles. Ajout de la classe "edit" sur <body> en mode édition et "display" en mode affichage. -> permet d'écrire facilement des styles pour les appliquer à l'un des deux modes séparément.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6159 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -12,24 +12,11 @@
     opacity: 0.8;
 }
 
-#map .serviceelement span {
-    font-size: 80%;
-    font-family: sans-serif;
-    background-color: white;
-    /*font-weight: bold;
-    opacity: 0.7;*/
-}
-
-#map .serviceelement span.no-icon,
-.obj span.no-icon {
-    border: 1px solid black;
-    padding: 4px;
-}
-
-#map .serviceelement span.no-icon-display {
+.display .obj.serviceelement span {
     padding-left: 26px;
     background-position: 4px;
 }
+
 
 #details ul.tags {
     list-style-type: none;
