--- a/src/vigilo/themes/templates/vigimap/edition.html
+++ b/src/vigilo/themes/templates/vigimap/edition.html
@@ -29,7 +29,7 @@
     <!--[if !(IE 7)]><!--><style type="text/css">@import "${tg.url('css/non-ie7.css')}";</style><!--><![endif]-->
 </head>
 
-<body>
+<body class="edit">
     <div id="maplist">
         <ul>
         </ul>
