Corrections pour le formulaire de recherche de VigiMap afin de contourner un bug d'IE lorsqu'on appuie sur la touche Entrée. Il faut également récupérer une instance "mootoolsifiée" de la cible de l'événement lors d'un clic sur une colonne, afin de pouvoir interroger certaines de ses propriétés (renseignées par mootools). Amélioration du formulaire de recherche dans VigiMap et VigiGraph pour faciliter la recherche pour l'utilisateur : le premier champ du formulaire de recherche obtient automatiquement le focus lorsqu'on affiche le dialogue.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6172 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -96,10 +96,17 @@
                 <label for="search_form_map">Map:</label>
                 <input type="text" id="search_form_map" name="search_form_map"
                     title="Search for a map (&quot;*&quot; for all, 100 max)" />
+                <!--!
+                    Internet Explorer (7 et peut-être d'autres) ne transmet
+                    pas les formulaires ne contenant qu'un seul champ éditable
+                    lorsqu'on appuie sur Entrée. On ajoute un second champ
+                    pour contourner le problème.
+                -->
+                <input type="text" name="dummy" style="display: none"/>
                 <input type="submit" id="search_form_search" value="${l_('Search')}" />
+                <div><p>Results:</p></div>
+                <div id="search_results"></div>
             </form>
-            <div><p>Results:</p></div>
-            <div id="search_results"></div>
         </div>
     </div>
 
