Ajout de l'adresse IP dans la boîte de dialogue d'info sur un hôte sur une carte (#500). Mise à jour des traductions dans les thèmes.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6219 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -25,7 +25,7 @@
             <p>${l_("Service name: %(service)s") % {'service': node['hls']}}</p>
         </py:when>
         <py:otherwise>
-            <p>${l_("Appliance name: %(host)s") % {'host': node['host']}}</p>
+            <p>${l_("Appliance name: %(host)s (%(address)s)") % {'host': node['host'], 'address': node['address']}}</p>
         </py:otherwise>
     </py:choose>
 </div>
