Ajout de l'adresse de l'hôte dans le dialogue de détail sur un service dans une carte de VigiMap (#500).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6266 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/node.html
+++ b/src/vigilo/themes/templates/vigimap/node.html
@@ -19,7 +19,7 @@
     </ul>
     <py:choose test="">
         <py:when test="node.has_key('service')">
-            <p>${l_("Service name: %(service)s on %(host)s") % {'service': node['service'], 'host': node['host' ]}}</p>
+            <p>${l_("Service name: %(service)s on %(host)s (%(address)s)") % {'service': node['service'], 'host': node['host' ], 'address': node['address']}}</p>
         </py:when>
         <py:when test="node.has_key('hls')">
             <p>${l_("Service name: %(service)s") % {'service': node['hls']}}</p>
