Chaque plugin adresse désormais une seule requête à la base de données pour tous les évènements de la page, plutôt qu'une requête par évènement.
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6291 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -194,7 +194,14 @@
             <tr py:when="0" py:for="(index, event) in enumerate(events)" class="${['odd', 'even'][index % 2]}">
                 <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
                     <xi:include href="plugins/${plugin_name}.html"/>
-                    ${data_template(plugin_name, plugin_instance, event)}
+                    <py:choose test="plugins_data.has_key(plugin_name)">
+                        <py:when test="True">
+                            ${data_template(plugin_name, plugin_instance, event, plugins_data[plugin_name][event[0].idcorrevent])}
+                        </py:when>
+                        <py:otherwise>
+                            ${data_template(plugin_name, plugin_instance, event, None)}
+                        </py:otherwise>
+                    </py:choose>
                 </py:for>
             </tr>
         </tbody>
