--- a/src/vigilo/themes/templates/vigiboard/plugins/servicename.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/servicename.html
@@ -7,7 +7,7 @@
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)">Servicename</th>
 
-<td class="plugin_${name}" py:def="data_template(name, instance, data)">${data.servicename}</td>
+<td class="plugin_${name}" py:def="data_template(name, instance, data, plugin_data)">${data.servicename}</td>
 
 </html>
 
