--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -85,7 +85,7 @@ window.addEvent("domready", function () {
             var idd = item.get('href').substring(1);
             var req = new Request.JSON({
                 link: 'cancel',
-                url: '${tg.url("/get_plugin_value")}',
+                url: '${tg.url("/plugin_json")}',
                 onSuccess: function (details, raw) {
                     $$('DetailsDialog_initial_state').set('text', details.initial_state);
                     $$('DetailsDialog_current_state').set('text', details.current_state);
@@ -127,7 +127,7 @@ window.addEvent("domready", function () {
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)"></th>
 
-<td class="plugin_${name}" py:def="data_template(name, instance, data)">
+<td class="plugin_${name}" py:def="data_template(name, instance, data, plugin_data)">
 <a href="#${data[0].idcorrevent}" class="Details_Link">
     <img alt="Details" title="Event details"
         src="${tg.url('/images/%s2.png' % StateName.value_to_statename(data[0].cause.current_state))}" />
