--- a/src/vigilo/themes/templates/vigiboard/plugins/id.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/id.html
@@ -9,7 +9,7 @@
 ID
 </th>
 
-<td class="plugin_${name}" py:def="data_template(name, instance, data)">${data[0].idcorrevent}</td>
+<td class="plugin_${name}" py:def="data_template(name, instance, data, plugin_data)">${data[0].idcorrevent}</td>
 
 </html>
 
