--- a/src/vigilo/themes/templates/vigiboard/plugins/priority.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/priority.html
@@ -7,7 +7,7 @@
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)" title="ITIL Priority">Priority</th>
 
-<py:def function="data_template(name, instance, data)">
+<py:def function="data_template(name, instance, data, plugin_data)">
     <py:with vars="state = StateName.value_to_statename(data[0].cause.current_state)">
         <td class="plugin_${name} ${state}">${data[0].priority}</td>
     </py:with>
