--- a/src/vigilo/themes/templates/vigiboard/plugins/status.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/status.html
@@ -162,7 +162,7 @@
 </th>
 </py:def>
 
-<py:def function="data_template(name, instance, data)">
+<py:def function="data_template(name, instance, data, plugin_data)">
     <py:with vars="cause = data[0].cause; ack = [data[0].status, u'None'][data[0].status is None]">
     <py:with vars="state = StateName.value_to_statename(cause.current_state)">
 
