Ajout d'une option (show_maptree) dans VigiMap pour contrôler l'état initial de l'arbre des cartes en mode affichage (#515).
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6301 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -27,7 +27,10 @@
     <script type="text/javascript" src="${tg.url('/js/babelThemes.js')}"></script>
     <script type="text/javascript" src="${tg.url('/i18n')}"></script>
 
-    <script type="text/javascript">var can_edit = ${defined('can_edit') and can_edit or 0};</script>
+    <script type="text/javascript">
+        var can_edit = ${defined('can_edit') and can_edit or 0};
+        var show_maptree = ${int(asbool(tg.config.get('show_maptree', True)))};
+    </script>
 
     <script type="text/javascript" src="${tg.url('/js/main.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/loader.js')}"></script>
