vigigraph: ne plus signaler avec alert() quand il y a un problème de chargement du graphe
git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6347 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigigraph/css/vigigraph.css
+++ b/src/vigilo/themes/public/vigigraph/css/vigigraph.css
@@ -118,5 +118,13 @@ img.logo {
 }
 
 .jxTree a, .jxTreeRoot a { overflow: visible; }
-.jxFlyout { z-index: 1010; } /* au-dessus des jx.Dialog */
+.jxFlyout { z-index: 2000; } /* au-dessus des jx.Dialog */
 
+
+.alert-indicator {
+    display: none;
+    position: absolute;
+    top: 3px;
+    right: 5px;
+    cursor: help;
+}
