--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -48,7 +48,7 @@
     </div>
 </div>
 
-<script type="text/javascript">
+<script type="text/javascript">/*<![CDATA[*/
 window.details_dialog = null;
 
 window.addEvent("domready", function () {
@@ -87,19 +87,23 @@ window.addEvent("domready", function () {
                 link: 'cancel',
                 url: '${tg.url("/plugin_json")}',
                 onSuccess: function (details, raw) {
+                    var i;
                     $$('DetailsDialog_initial_state').set('text', details.initial_state);
                     $$('DetailsDialog_current_state').set('text', details.current_state);
                     $$('DetailsDialog_peak_state').set('text', details.peak_state);
-                    $$('DetailsDialog_event').set('href', "${tg.url('/event/')}" + details.idcause);
-                    $$('DetailsDialog_masked').set('href', "${tg.url('/masked_events/')}" + details.idcorrevent);
+                    $$('DetailsDialog_event').set('href', "${tg.url('/event/')}?idevent=" + encodeURIComponent(details.idcause));
+                    $$('DetailsDialog_masked').set('href', "${tg.url('/masked_events/')}?idcorrevent=" + encodeURIComponent(details.idcorrevent));
                     if (details.service) {
-                        $$('DetailsDialog_item').set('href', "${tg.url('/item/1/')}" + details.host + "/" + details.service);
+                        $$('DetailsDialog_item').set('href', "${tg.url('/item/1/')}?host=" +
+                            encodeURIComponent(details.host) + "&service=" +
+                            encodeURIComponent(details.service));
                     } else {
-                        $$('DetailsDialog_item').set('href', "${tg.url('/item/1/')}" + details.host + "/");
+                        $$('DetailsDialog_item').set('href', "${tg.url('/item/1/')}?host=" +
+                            encodeURIComponent(details.host));
                     }
-                    <py:for each="edname, edit in enumerate(tg.config['vigiboard_links.eventdetails'])">
-                    $$('DetailsDialog_${edname}').set('href', details.eventdetails['${edname}']);
-                    </py:for>
+                    for (i = 0; i < ${len(tg.config['vigiboard_links.eventdetails'])}; i++) {
+                        $$('DetailsDialog_'+i.toString()).set('href', details.eventdetails[i.toString()]);
+                    }
                     window.details_dialog.setBusy(false);
                 },
                 onFailure: function (xhr) {
@@ -122,7 +126,7 @@ window.addEvent("domready", function () {
         }.bind(this, el));
     }, window.details_dialog);
 });
-</script>
+/*]]>*/</script>
 </py:def>
 
 <th id="plugin_${name}" class="plugin_${name}" py:def="header_template(name, instance)"></th>
