--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -43,20 +43,20 @@
 
                     <div class="navigation_arrow left_arrow">
                         <py:choose>
-                            <img py:when="page == 1" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" />
+                            <img py:when="not page.previous_page" src="${tg.url('/images/dis_top_left_arrow.png')}" alt="Previous" title="Previous page" />
 
-                            <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page-1, 'hostname': hostname, 'servicename': servicename})}">
+                            <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page.previous_page, 'hostname': hostname, 'servicename': servicename})}">
 
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
 
-                            <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page-1, 'hostname': hostname})}">
+                            <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page.previous_page, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
 
                             <!--! "dummy" est nécessaire pour que Genshi mette à jour le dictionnaire. -->
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page-1)"
+                                py:with="copy = search.copy(); dummy = copy.update(page=page.previous_page)"
                                 href="${tg.url('/', copy)}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
@@ -65,18 +65,18 @@
 
                     <div class="navigation_arrow right_arrow">
                         <py:choose>
-                            <img py:when="page >= nb_pages" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" />
+                            <img py:when="not page.next_page" src="${tg.url('/images/dis_top_right_arrow.png')}"  alt="Next" title="Next page" />
 
-                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page+1, 'hostname': hostname, 'servicename': servicename})}">
+                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page.next_page, 'hostname': hostname, 'servicename': servicename})}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
 
-                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page+1, 'hostname': hostname})}">
+                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page.next_page, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
 
                              <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page+1)"
+                                py:with="copy = search.copy(); dummy = copy.update(page=page.next_page)"
                                 href="${tg.url('/', copy)}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
@@ -114,18 +114,18 @@
 
                     <div class="navigation_arrow left_arrow">
                         <py:choose>
-                         <img py:when="page == 1" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" />
+                         <img py:when="not page.previous_page" src="${tg.url('/images/dis_bottom_left_arrow.png')}" alt="Previous" title="Previous page" />
 
-                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page-1, 'hostname': hostname, 'servicename': servicename})}">
+                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page.previous_page, 'hostname': hostname, 'servicename': servicename})}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
 
-                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page-1, 'hostname': hostname})}">
+                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page.previous_page, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
 
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page-1)"
+                                py:with="copy = search.copy(); dummy = copy.update(page=page.previous_page)"
                                 href="${tg.url('/', copy)}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
                             </a>
@@ -134,64 +134,48 @@
 
                     <div class="navigation_arrow right_arrow">
                         <py:choose>
-                            <img py:when="page >= nb_pages" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" />
+                            <img py:when="not page.next_page" src="${tg.url('/images/dis_bottom_right_arrow.png')}"  alt="Next" title="Next page" />
 
-                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page+1, 'hostname': hostname, 'servicename': servicename})}">
+                             <a py:when="hostname and servicename" href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': page.next_page, 'hostname': hostname, 'servicename': servicename})}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
 
-                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page+1, 'hostname': hostname})}">
+                             <a py:when="hostname" href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': page.next_page, 'hostname': hostname})}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
 
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page+1)"
+                                py:with="copy = search.copy(); dummy = copy.update(page=page.next_page)"
                                 href="${tg.url('/', copy)}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
                     </div>
 
-                    <py:choose>
-                        <div py:when="nb_pages > 1" class="pagination">
-                            <span>
-                                  ${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-                                  <br/>
-                                Pages
-
-                                    <py:for each="p in range(1, nb_pages + 1)">
-                                        <py:choose>
-                                              <py:when test="p == page">${p}</py:when>
-                                              <py:when test="hostname and servicename">
-                                                  <a href="${tg.url('/item/%(page)d/%(hostname)s/%(servicename)s' % {'page': p, 'hostname': hostname, 'servicename': servicename})}">${p}</a>
-                                              </py:when>
-                                              <py:when test="hostname">
-                                                  <a href="${tg.url('/item/%(page)d/%(hostname)s' % {'page': p, 'hostname': hostname})}">${p}</a>
-                                              </py:when>
-                                              <py:otherwise py:with="copy = search.copy(); dummy = copy.update(page=p)">
-                                                  <a href="${tg.url('/', copy)}">${p}</a>
-                                            </py:otherwise>
-                                        </py:choose>
-                                    </py:for>
-                            </span>
-                        </div>
-                        <div py:otherwise="" class="line_pagination">
-                            <span>
-                                  ${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % rows_info}
-                            </span>
-                        </div>
-                    </py:choose>
-
+                    <div class="${page.item_count and 'pagination' or 'line_pagination'}">
+                        <span>
+                            ${l_('Showing rows %(id_first_row)d to %(id_last_row)d of %(total_rows)d') % {
+                                'id_first_row': page.first_item or 0,
+                                'id_last_row': page.last_item or 0,
+                                'total_rows': page.item_count,
+                            }}
+                            <br/>
+                            ${page.pager(
+                                format='$link_first $link_previous ~3~ $link_next $link_last',
+                                page_param='page', show_if_single_page=True, **search
+                            )}
+                        </span>
+                    </div>
                 </th>
             </tr>
         </tfoot>
 
-        <tbody py:choose="not rows_info['total_rows']">
+        <tbody py:choose="not page.item_count">
             <tr py:when="1">
                 <td colspan="${columns_count}" class="plugin_error">There are no events.</td>
             </tr>
 
-            <tr py:when="0" py:for="(index, event) in enumerate(events)" class="${['odd', 'even'][index % 2]}">
+            <tr py:when="0" py:for="(index, event) in enumerate(page.items)" class="${['odd', 'even'][index % 2]}">
                 <py:for each="(plugin_name, plugin_instance) in config['columns_plugins']">
                     <xi:include href="plugins/${plugin_name}.html"/>
                     <py:choose test="plugins_data.has_key(plugin_name)">
