- À l'ouverture de la boîte de dialogue des détails d'un évènement, une animation est désormais affichée pour signifier à l'utilisateur que la récupération des données est en cours. Durant ce laps de temps, les liens ne sont plus cliquables, et les informations d'état sont vides (auparavant elles conservaient les données d'un affichage précédent, ce quie pouvait induire l'utilisateur en erreur).
- Lorsqu'une erreur survient pendant la récupération des données, l'utilisateur en est maintenant averti par un message d'erreur, et de la même manière que durant le chargement les liens ne sont plus cliquables et les informations d'états sont vides.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6480 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigiboard/css/common_events.css
+++ b/src/vigilo/themes/public/vigiboard/css/common_events.css
@@ -312,6 +312,29 @@ div.clearingdiv {
     font-weight: bold;
 }
 
+#DetailsDialog .loading,
+#DetailsDialog .loading-error {
+    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 100;
+}
+
+#DetailsDialog .loading img,
+#DetailsDialog .loading-error p {
+    display: block;
+    float: right;
+    margin-top: 6px;
+    margin-right: 5px;
+}
+
+#DetailsDialog .loading-error p {
+    font-weight: bold;
+    color: red;
+}
 
 /* Plugins */
 
