--- a/src/vigilo/themes/templates/vigiboard/plugins/details.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/details.html
@@ -5,6 +5,12 @@
 <py:def function="plugin_template(name, instance)"
     py:with="nb_links = len(tg.config['vigiboard_links.eventdetails'])">
 <div id="DetailsDialog">
+    <div class="loading">
+        <img alt="loading..." src="${tg.url('images/loading.gif')}" />
+    </div>
+    <div class="loading-error">
+        <p>Error while loading data...</p>
+    </div>
     <h2>State info</h2>
     <div id="state_info">
         <div class="label">
@@ -82,6 +88,19 @@ window.addEvent("domready", function () {
         el.addEvent('click', function (item) {
             remove_selection();
 
+            // On supprime les anciens états, pour ne pas induire en erreur l'utilisateur
+            // dans le cas où les nouvelles infos prennent un peu de temps à charger.
+            $$('DetailsDialog_initial_state').set('text', '');
+            $$('DetailsDialog_current_state').set('text', '');
+            $$('DetailsDialog_peak_state').set('text', '');
+
+            // On supprime également un éventuel message d'erreur survenu
+            // lors d'un précédent affichage de la boîte de dialogue.
+            $$$$('.loading-error').setStyle('display', 'none');
+
+            // On affiche une animation pendant toute la durée du chargement
+            $$$$('.loading').setStyle('display', 'block');
+
             var idd = item.get('href').substring(1);
             var req = new Request.JSON({
                 link: 'cancel',
@@ -105,9 +124,21 @@ window.addEvent("domready", function () {
                         $$('DetailsDialog_'+i.toString()).set('href', details.eventdetails[i.toString()]);
                     }
                     window.details_dialog.setBusy(false);
+
+                    // Arrêt de l'animation de chargement
+                    $$$$('.loading').setStyle('display', 'none');
+
                 },
                 onFailure: function (xhr) {
                     window.details_dialog.setBusy(false);
+
+                    // Arrêt de l'animation de chargement
+                    $$$$('.loading').setStyle('display', 'none');
+
+                    // On affiche un message indiquant qu'une
+                    // erreur est survenue durant le chargement
+                    $$$$('.loading-error').setStyle('display', 'block');
+
                     remove_selection();
                     if (!xhr.responseText)
                         return;
