--- a/src/vigilo/themes/templates/vigimap/main.html
+++ b/src/vigilo/themes/templates/vigimap/main.html
@@ -36,7 +36,7 @@
     <script type="text/javascript" src="${tg.url('/js/loader.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/legend.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/canvas.js')}"></script>
-    <script type="text/javascript" src="${tg.url('/js/treemap.js')}"></script>
+    <script type="text/javascript" src="${tg.url('/js/grouptree.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/menu.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/map.js')}"></script>
     <script type="text/javascript" src="${tg.url('/js/details.js')}"></script>
