Ajustement du padding en mode édition.
Modifie le padding utilisé en mode édition,
de sorte que le positionnement des éléments
de la carte devrait être strictement identique
entre le mode édition et le mode affichage.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6565 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/public/vigimap/css/ServiceElement.css
+++ b/src/vigilo/themes/public/vigimap/css/ServiceElement.css
@@ -17,6 +17,9 @@
     background-position: 4px;
 }
 
+.edit .obj.serviceelement span {
+    padding: 2px 14px;
+}
 
 #details ul.tags {
     list-style-type: none;
