Implémente le plugin "masked_events".
Ce plugin permet d'afficher le nombre d'éléments masqués par l'événement corrélé
dans VigiBoard. S'il y a des événements masqués, un lien est ajouté qui permet
ensuite de voir la liste des événements masqués.
Le plugin est désactivé par défaut car son intérêt immédiat n'est pas évident.
Voir le ticket #558.


git-svn-id: https://vigilo-dev.si.c-s.fr/svn@6580 b22e2e97-25c9-44ff-b637-2e5ceca36478

--- a/src/vigilo/themes/templates/vigiboard/plugins/masked_events.html
+++ b/src/vigilo/themes/templates/vigiboard/plugins/masked_events.html
@@ -5,10 +5,13 @@
 <py:def function="plugin_template(name, instance)">
 </py:def>
 
-<py:def function="header_template(name, instance)">
-</py:def>
+<th id="plugin_${name}" class="plugin_${name}"
+    py:def="header_template(name, instance)"
+    title="Number of masked events">Masked</th>
 
-<py:def function="data_template(name, instance, data, plugin_data)">
-</py:def>
+<td class="plugin_${name}" py:def="data_template(name, instance, data, plugin_data)">
+    <!--! plugin_data contient le nombre d'événements masqués. -->
+    <a py:strip="not plugin_data" href="/masked_events/${data[0].idcorrevent}">${plugin_data}</a>
+</td>
 
 </html>
