--- a/src/vigilo/themes/templates/vigiboard/events_table.html
+++ b/src/vigilo/themes/templates/vigiboard/events_table.html
@@ -56,8 +56,7 @@
 
                             <!--! "dummy" est nécessaire pour que Genshi mette à jour le dictionnaire. -->
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.previous_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.previous_page)}">
                                 <img src="${tg.url('/images/top_left_arrow.png')}" alt="Previous" title="Previous page"/>
                              </a>
                         </py:choose>
@@ -76,8 +75,7 @@
                              </a>
 
                              <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.next_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.next_page)}">
                                 <img src="${tg.url('/images/top_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -125,8 +123,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.previous_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.previous_page)}">
                                 <img src="${tg.url('/images/bottom_left_arrow.png')}" alt="Previous" title="Previous page"/>
                             </a>
                         </py:choose>
@@ -145,8 +142,7 @@
                              </a>
 
                             <a py:otherwise=""
-                                py:with="copy = search.copy(); dummy = copy.update(page=page.next_page)"
-                                href="${tg.url('/', copy)}">
+                                href="${tg.url('/', params=fixed_search, page=page.next_page)}">
                                 <img src="${tg.url('/images/bottom_right_arrow.png')}" alt="Next" title="Next page"/>
                              </a>
                         </py:choose>
@@ -162,7 +158,7 @@
                             <br/>
                             ${page.pager(
                                 format='$link_first $link_previous ~3~ $link_next $link_last',
-                                page_param='page', show_if_single_page=True, **search
+                                page_param='page', show_if_single_page=True, **fixed_search
                             )}
                         </span>
                     </div>
